--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -1,12 +1,26 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- <style>
+        .style
+        {
+            beckground-color: rgb(181, 178, 178);
+        }
+        body
+        {
+            background-color: bisque;
+        }
+    </style> -->
+    <link rel="stylesheet" href="{% static 'css/style.css' %}"
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <p>HELLO..</p>
+    <div class="style">
+    <p style="color:rgb(117, 223, 223); text-align:center">Muhammed Shees</p>
+    </div>
 </body>
 </html>
