--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -12,15 +12,27 @@
             background-color: bisque;
         }
     </style> -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}"
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <div class="style">
-    <p style="color:rgb(117, 223, 223); text-align:center">Muhammed Shees</p>
-    </div>
+    <center>
+        <br><br><br>
+        <h1><u>Login Form:</u></h1>
+        <br><br><br><br>
+        <form action="" method="post">
+            Username:
+            <input id="input1" type="text">
+            <br><br>
+            Password:
+            <input class="input2" type="text">
+            <br><br>
+            <input type="button" value="submit">
+            <input type="button" value="clear">
+        </form>
+    </center>
 </body>
 </html>
