--- a/myapp/templates/signup.html
+++ b/myapp/templates/signup.html
@@ -21,30 +21,35 @@
     <title>Document</title>
 </head>
 <body>
-    <center>
-        <div class="container-fluid">
-            <p>This is the login page</p>
-            <div class="row">
-                <p>Row class</p>
-                <div class="col-lg-6"><p>col</p></div>
-                <div class="col-lg-6"><p>another division</p></div>
+    <div class="container-fluid">
+        
+        <div class="row">
+            
+            <div class="col-sm-6 col-lg-6">
+                <h1><u>Sign up</u></h1>
+            </div>
+            <div class="col-sm-6 col-lg-6">
+                <br><br><br>
+                <center>
+                
+                <br><br><br><br>
+                <form action="" method="post">
+                    Username:
+                    <input id="input1" type="text">
+                    <br><br>
+                    Password:
+                    <input class="input2" type="text">
+                    <br><br>
+                    <input type="button" value="submit">
+                    <input type="button" value="clear"><br>
+                    <button type="button" class="btn btn-info">Info</button>
+                </form>
+            </center>
             </div>
         </div>
-        <br><br><br>
+    </div>
         
-        <h1><u>Login Form:</u></h1>
-        <br><br><br><br>
-        <form action="" method="post">
-            Username:
-            <input id="input1" type="text">
-            <br><br>
-            Password:
-            <input class="input2" type="text">
-            <br><br>
-            <input type="button" value="submit">
-            <input type="button" value="clear">
-            <button type="button" class="btn btn-info">Info</button>
-        </form>
-    </center>
+       
+   
 </body>
 </html>
