--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -12,7 +12,37 @@
             background-color: bisque;
         }
     </style> -->
+    <script>
+        function fun()
+        {
+            x=prompt("Enter a number:")
+            // alert(x)
+            // confirm("done")
+            if(x%2==0)
+            {
+             alert("divisible by 2")
+            }
+            else
+            {
+             alert("not divisble by 2")
+            }
+            var student = {fname:"Prithvi", lname:"Raj", age:47};
+            for (prop in student)
+            {
+                console.log(prop+" is "+student[prop]);
+            }
+            for(i=0;i<4;i++)
+            {  
+                document.write("<br>")
+                for(j=0;j<=i;j++)
+                {
+                    document.write("*");
+                }
+            }
+        }
+    </script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="{% static 'java.js' %} 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <meta charset="UTF-8">
@@ -45,6 +75,8 @@
             <input type="button" value="clear">
             <button type="button" class="btn btn-info">Info</button>
         </form>
+        <button onClick="fun()">click here</button>
     </center>
+    
 </body>
 </html>
