--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -2,7 +2,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- <style>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous">
+        
+        {
+
+        }
+    </script>
+    <style>
         .style
         {
             beckground-color: rgb(181, 178, 178);
@@ -11,38 +17,87 @@
         {
             background-color: bisque;
         }
-    </style> -->
+    </style> 
     <script>
-        function fun()
+         function fun()
         {
-            x=prompt("Enter a number:")
-            // alert(x)
-            // confirm("done")
-            if(x%2==0)
+            document.getElementById("heading").style.color="red"
+           
+       
+            // x=prompt("Enter a number:")
+            // // alert(x)
+            // // confirm("done")
+            // if(x%2==0)
+            // {
+            //  alert("divisible by 2")
+            // }
+            // else
+            // {
+            //  alert("not divisble by 2")
+            // }
+            // var student = {fname:"Prithvi", lname:"Raj", age:47};
+            // for (prop in student)
+            // {
+            //     console.log(prop+" is "+student[prop]);
+            // }
+            // for(i=0;i<4;i++)
+            // {  
+            //     document.write("<br>")
+            //     for(j=0;j<=i;j++)
+            //     {
+            //         document.write("*");
+            //     }
+            // }
+        }
+
+        function val()
+        {
+            x=document.getElementById("input1").value
+            y=document.getElementById("input2").value
+
+            if(x=="")
             {
-             alert("divisible by 2")
+                console.log("hai")
+                document.getElementById("erroruser").innerHTML="Please enter the username"
             }
             else
             {
-             alert("not divisble by 2")
+                document.getElementById("erroruser").innerHTML=""
             }
-            var student = {fname:"Prithvi", lname:"Raj", age:47};
-            for (prop in student)
+            if(y=="")
             {
-                console.log(prop+" is "+student[prop]);
+                document.getElementById("passworderror").innerHTML="Please enter the password"
             }
-            for(i=0;i<4;i++)
-            {  
-                document.write("<br>")
-                for(j=0;j<=i;j++)
-                {
-                    document.write("*");
-                }
+            else
+            {
+                document.getElementById("passworderror").innerHTML=""
             }
+           
+
+
         }
-    </script>
+        
+        $(document).ready(function()
+            {
+                $("p").css("background-color","cyan");
+
+            });
+
+        $(document).ready(function()
+            {
+                $("#btn").click(function()
+            {
+                $(this).hide();
+            });
+                
+                // $(this).hide();
+                // console.hide("hello")
+            });
+        
+    </script> 
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="{% static 'java.js' %} 
+    <!-- <script src="{% static 'java.js' %} > -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <meta charset="UTF-8">
@@ -53,7 +108,11 @@
 <body>
     <center>
         <div class="container-fluid">
-            <p>This is the login page</p>
+        <p>
+        this is the home page
+        </p>
+        <button type="button" id="btn">button</button>
+            <p></p>This is the login page</p>
             <div class="row">
                 <p>Row class</p>
                 <div class="col-lg-6"><p>col</p></div>
@@ -62,16 +121,21 @@
         </div>
         <br><br><br>
         
-        <h1><u>Login Form:</u></h1>
+        <h1 id="heading"><u>Login Form:</u></h1>
         <br><br><br><br>
-        <form action="" method="post">
+        <form action="" method="get">
+            <p id="erroruser">
+
+            </p>
+
             Username:
             <input id="input1" type="text">
             <br><br>
+            <p id="passworderror"></p>
             Password:
-            <input class="input2" type="text">
+            <input id="input2" type="text">
             <br><br>
-            <input type="button" value="submit">
+            <button type="button"  onClick="val()">submit</button>
             <input type="button" value="clear">
             <button type="button" class="btn btn-info">Info</button>
         </form>
