--- a/myapp/templates/signup.html
+++ b/myapp/templates/signup.html
@@ -2,54 +2,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- <style>
-        .style
-        {
-            beckground-color: rgb(181, 178, 178);
-        }
-        body
-        {
-            background-color: bisque;
-        }
-    </style> -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sign Up</title>
+    <script>
+        function val()
+        {
+            x=document.getElementById("input1").value
+            y=document.getElementById("input2").value
+            z=document.getElementById("input3").value
+
+            if(x=="")
+            {
+                alert("Please enter the username")
+            }
+            if(y=="")
+            {
+                alert("Please enter the password")
+            }
+            if(y!=z)
+            {
+                alert("Please enter the same password")
+            }
+        }
+    </script>
 </head>
 <body>
-    <div class="container-fluid">
-        
-        <div class="row">
-            
-            <div class="col-sm-6 col-lg-6">
-                <h1><u>Sign up</u></h1>
-            </div>
-            <div class="col-sm-6 col-lg-6">
-                <br><br><br>
-                <center>
-                
                 <br><br><br><br>
-                <form action="" method="post">
+                <h1><b><u>SIGN-UP</u></b></h1>
+                <form action="" method="get">
+                    Full name:
+                    <input type="text">
+                    Gender:
+                    <input type="radio" value="male">Male</input><br>
+                    <input type="radio" value="female">Female</input>
+                    Nationality:
+                    <select>
+                        <value>India</value>
+                        <value>America</value>
+                        <value>Canada</value>
+                    </select>
                     Username:
                     <input id="input1" type="text">
                     <br><br>
                     Password:
-                    <input class="input2" type="text">
+                    <input id="input2" type="text">
+                    Confirm Password:
+                    <input id="input3" type="text">
                     <br><br>
-                    <input type="button" value="submit">
+                    <input type="button" onclick="val()" value="Sign Up">
                     <input type="button" value="clear"><br>
                     <button type="button" class="btn btn-info">Info</button>
                 </form>
-            </center>
-            </div>
-        </div>
-    </div>
-        
-       
-   
 </body>
 </html>
